--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ DB_USER=your_database_user
 DB_PASSWORD=your_database_password
 DB_HOST=your_database_host  
 DB_PORT=your_database_port  
+
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_SECRET=your_google_secret
